--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,4 @@
+/* estilos generales */
 :root {
     --white: #FFFFFF;
     --black: #000000;
@@ -16,6 +17,7 @@
   .inactive{
     display: none;
   }
+  /* navbar  general */
   nav {
     display: flex;
     justify-content: space-between;
@@ -80,6 +82,7 @@
     align-items: center;
   }
 
+   /* desktop menu */
   .desktop-menu {
     position: absolute;
     top: 60px;
@@ -118,7 +121,39 @@
     display: inline-block;
   }
 
+  /* Menu en mobile */
+  .mobile-menu {
+    padding: 24px;
+    position: absolute;
+    top: 60px;
+  }
+  .mobile-menu a {
+    text-decoration: none;
+    color: var(--black);
+    font-weight: bold;
+    /* margin-bottom: 24px; */
+  }
+  .mobile-menu ul {
+    padding: 0;
+    margin: 24px 0 0;
+    list-style: none;
+  }
+  .mobile-menu ul:nth-child(1) {
+    border-bottom: 1px solid var(--very-light-pink);
+  }
+  .mobile-menu ul li {
+    margin-bottom: 24px;
+  }
+  .email {
+    font-size: var(--sm);
+    font-weight: 300 !important;
+  }
+  .sign-out {
+    font-size: var(--sm);
+    color: var(--hospital-green) !important;
+  }
 
+ /* cambios  de estilos por medidas de pantalla */
 
   @media (max-width: 640px) {
     .menu {
@@ -128,6 +163,14 @@
       display: none;
     }
     .navbar-email {
+      display: none;
+    }
+    .desktop-menu{
+      display: none;
+    }
+  }
+  @media (min-width:641px) {
+    .mobile-menu{
       display: none;
     }
   }
